fix: <code> is out of alignment in <h1>, <h2> and <h3>

--- a/packages/typescriptlang-org/src/components/layout/main.scss
+++ b/packages/typescriptlang-org/src/components/layout/main.scss
@@ -165,7 +165,6 @@ html.font-open-dyslexic {
   h3 > code {
     background-color: var(--inline-code-background-color);
     font-size: 0.95em;
-    margin-top: 0.2em;
     margin-left: 0.2em;
     margin-right: 0.2em;
     padding: 2px 4px;
